# advent-of-code-2025

./: .gitignore  Cargo.toml
day01/: Cargo.toml  Day01.cs  Day01.fsx  day01.go  day01.rs  day01.zig
day02/: Cargo.toml  Day02.cs  day02.fsx  day02.go  day02.rs  day02.zig
day03/: Cargo.toml  Day03.cs  day03.fsx  day03.go  day03.rs  day03.zig
day04/: Cargo.toml  Day04.cs  day04.fsx  day04.go  day04.rs  day04.zig
day05/: Cargo.toml  Day05.cs  day05.fsx  day05.go  day05.rs  day05.zig
day06/: Cargo.toml  Day06.cs  day06.fsx  day06.go  day06.rs  day06.zig
day07/: Cargo.toml  Day07.cs  day07.fsx  day07.go  day07.rs  day07.zig
day08/: Cargo.toml  Day08.cs  day08.fsx  day08.go  day08.rs  day08.zig
day09/: Cargo.toml  Day09.cs  README.md  day09.fsx  day09.go  day09.rs  day09.zig
day10/: Cargo.toml  Day10.cs  README.md  day10.fsx  day10.rs
day11/: Cargo.toml  Day11.cs  day11.fsx  day11.rs
day12/: Cargo.toml  day12.cs  day12.fsx  day12.rs
