[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ochronus"]

[workspace.dependencies]
# Common dependencies can be defined here and referenced by workspace members

[profile.release]
lto = true
codegen-units = 1
strip = true
